--- a/css/product-card-style.css
+++ b/css/product-card-style.css
@@ -6,6 +6,7 @@
     --section-text-color: black;
 }
 
+/* body */
 body 
 {
     background-color: var(--background-color);
@@ -18,6 +19,7 @@ body
     margin: 0;
 }
 
+/*product */
 .product-card 
 {
     display: flex;
@@ -28,6 +30,8 @@ body
     overflow: hidden;
     margin-top: 120px;
 }
+
+
 
 .left-img-col img 
 {
@@ -109,6 +113,7 @@ body
     margin-bottom: 20px;
 }
 
+/* buy button */
 .buy-btn 
 {
     width: 150px;
